Modified the search for the initial folders in which the data is stored